# proj_QpsPrototype_Otsdaq

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt
qps-otsdaq-plugins/: CMakeLists.txt
qps-otsdaq-plugins/DataProcessorPlugins/: CMakeLists.txt  QPSDataDecoderConsumer.h  QPSDataDecoderConsumer_processor.cc  QPSProtoDQMHistosConsumer.h  QPSProtoDQMHistosConsumer_processor.cc
qps-otsdaq-plugins/DemoRootUtilities/: QPSProtoDQMHistos.cc  QPSProtoDQMHistos.h
qps-otsdaq-plugins/QPSDefinitions/: CMakeLists.txt  QPSDefinitions.cc  QPSDefinitions.h
qps-otsdaq-plugins/QPSHdf5Utilities/: CMakeLists.txt  HDF5StreamWriter.hpp  QPSHdf5Writer.cc  QPSHdf5Writer.h
qps-otsdaq-plugins/QPSRootUtilities/: CMakeLists.txt  QPSProtoDQMHistos.cc  QPSProtoDQMHistos.h
