#add_subdirectory(FEInterfaces)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(QPSRootUtilities)
#add_subdirectory(InterfaceTest)
#add_subdirectory(ArtModules)
#add_subdirectory(Generators)
#add_subdirectory(Overlays)
#add_subdirectory(SlowControlsInterfacePlugins)
#add_subdirectory(DetectorReader)
#add_subdirectory(TemplateDirectory)

